tests/ui/coherence/coherence-with-closure.stderr
error[E0119]: conflicting implementations of trait `Trait` for type `Wrapper<OpaqueClosure>`
  --> $DIR/coherence-with-closure.rs:12:1
   |
LL | impl Trait for Wrapper<OpaqueClosure> {}
   | ------------------------------------- first implementation here
LL | impl<T: Sync> Trait for Wrapper<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Wrapper<OpaqueClosure>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
